# cicd

./: .gitignore  README.md  pyproject.toml
.gihub/workflows/: ci.yml
tests/: test_basic.py
