[tool.poetry]
name = "cicd"
version = "1.0.0"
description = "Continuous project with CI/CD starting with hello world"
authors = ["houser2388@gmail.com"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"